--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  	 </head>
 <body>   
  <div id="map"></div>
- <script>    var map = L.map('map',{    center: [-0.35, 37.33],    zoom: 15   
-  });
+ <script> 
+   { var map = L.map('map').setView([-0.023559, 37.9061928], 10)}; 
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'    }).addTo(map);
     L.popup({ elevation: 260.0 })
        .setLatLng([-1.286389, 36.817223])
